css/style.css
/* ... */
#orderSummary>h3{
	float:left;
	margin-bottom:.5rem;
}
#addressTo{
	margin-bottom:.7rem;
	width:100%;
}
#createAccount{
	margin: 1rem auto;
	display: block;
}
#couponCodeDiv{
	padding-top:2rem;
}
#couponCodeDiv>h4{
	line-height:1;
	float:left;
	width:33%;
	font-weight: normal;
	margin-top: -.3rem;
}
#couponCode{
	width:65%;	
}
#orderErrorOccurred{
	text-align:center;
	font-size:1.5rem;
}
#noCards{
	font-size:2rem;	
}
.swipeText{
	vertical-align: text-bottom;
	float: right;
	font-size: 1rem;
	line-height: 2.1rem;
}
hr{
	clear:both;
}
/* Alex's CSS */
/*.box-shadow-menu {
  position: relative;
  padding-left: 1.25em;
}
.box-shadow-menu:before {
  content: "";
  position: absolute;
  display: inline-block;
  left: .25em;
  top: 0.25em;
  width: 1em;
  height: 0.15em;
  margin: 1em;
  background: white;
  box-shadow: 
    0 0.25em 0 0 white,
    0 0.5em 0 0 white;
}
.border-menu {
  position: relative;
  padding-left: 1.25em;
}
.border-menu:before {
  content: "";
  position: absolute;
  top: 1em;
  left: 1em;
  width: 2em;
  height: 0.250em;
  border-top: 0.750em double white;
  border-bottom: 0.250em solid white;
}*/
#ss-blocker{
	position:absolute;
	top:0;
	left:0;
	height:100%;	
	width:100%;
	z-index:10000;
	display:none;
}

